Fixed wrapping on mobile/desktop

--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -71,12 +71,17 @@
   background: #EFEFF5 !important;
   padding: .5rem 1.25rem !important;
   border: 0 !important;
+  overflow-x: auto !important;
+}
+.ss-values {
+  flex-wrap: nowrap !important;
 }
 .ss-value {
   font-size: 1rem !important;
   border-radius: 99px !important;
   padding: .25rem 1rem !important;
   background: #7181F4 !important;
+  white-space: nowrap !important;
 }
 .ss-disabled {
   font-size: 1.125rem !important;
